incubator/phpfpm-app/0.1.5/CONFIG.md
# phpfpm-app

![Version: 0.1.5](https://img.shields.io/badge/Version-0.1.5-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: latest](https://img.shields.io/badge/AppVersion-latest-informational?style=flat-square)

A Sample app with multiple containers (phpfpm-app, mariadb, nginx).

**Homepage:** <https://github.com/truecharts/apps/master/charts/incubator/spotweb>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/spotweb/spotweb>
* <https://hub.docker.com/r/jgeusebroek/spotweb>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org/ | mariadb | 1.0.30 |
| https://truecharts.org | common | 8.9.18 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| appImage.pullPolicy | string | `"IfNotPresent"` |  |
| appImage.repository | string | `"jbaten/phpfpm-app"` |  |
| appImage.tag | string | `"0.1.0@sha256:f9b813042e5e35c36e19b67029f010b7b5f85688081549960b7eabbd351b72d7"` |  |
| env | string | `nil` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"bitnami/nginx"` |  |
| image.tag | string | `"latest"` |  |
| mariadb.enabled | bool | `true` |  |
| mariadb.existingSecret | string | `"mariadbcreds"` |  |
| mariadb.mariadbDatabase | string | `"mini"` |  |
| mariadb.mariadbUsername | string | `"mini"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| phpfpmService.name | string | `"phpfpm"` |  |
| phpfpmService.phpfpmPort | int | `9000` |  |
| phpfpmService.type | string | `"NodePort"` |  |
| service.main.ports.main.port | int | `11000` |  |
| service.main.ports.main.targetPort | int | `80` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
